Added Sign In Files inside Frontend

--- a/bluestockfintech/ipo/templates/Frontend/Signin/Signin.html
+++ b/bluestockfintech/ipo/templates/Frontend/Signin/Signin.html
@@ -1,1 +1,100 @@
 <!-- coding -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
+
+    <link rel="stylesheet" href="IPO-BSF-S35-own-/bluestockfintech/ipo/static/css/signinglobal.css" />
+    <link rel="stylesheet" href="IPO-BSF-S35-own-/bluestockfintech/ipo/static/css/signinstyle.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+    />
+  </head>
+  <body>
+    <div class="sign-in">
+      <div class="sign-in-inner">
+        <div class="frame-parent">
+          <div class="frame-group">
+            <img class="frame-child" alt="" src="./public/frame-40589@2x.png" />
+
+            <form class="input-section">
+              <div class="login">
+                <div class="input">
+                  <div class="email">
+                    <label class="label">Email Address</label>
+                    <div class="input1">
+                      <input class="text" type="email" placeholder="Enter Email Address" required=""/>
+                    </div>
+                  </div>
+                  <div class="email">
+                    <label class="header">
+                      <div class="label1">Password</div>
+                      <div class="right-text">
+                        <a href="#">Forgot Password?</a>
+                      </div>
+                    </label>
+                    <div class="input2">
+                      <input
+                        class="text1"
+                        type="password"
+                        name="password"
+                        autocomplete="current-password"
+                        required=""
+                        id="id_password"
+                        placeholder="Enter Password"
+                      />
+                      <img
+                        class="iconeye"
+                        src="https://media.geeksforgeeks.org/wp-content/uploads/20210917145551/eye.png"
+                        id="togglePassword"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="g-recaptcha brochure__form__captcha" data-sitekey="6LdYzgcqAAAAAHqv2FO2YI8t-LCLxQJ59w4DU8SI"></div>
+                <div class="button">
+                  <div class="remind-me">
+                    <input class="tick" type="checkbox" />
+
+                    <span class="keep-me-signed">Keep me signed in</span>
+                  </div>
+                  <button class="buttonprimary">
+                    <span class="label2">Login</span>
+                  </button>
+                </div>
+              </div>
+              <div class="devider">
+                <img
+                  class="devider-child"
+                  alt=""
+                  src="./public/line-10@2x.png"
+                />
+
+                <div class="sign-in-with">
+                  <span class="or-sign-in">or sign in with</span>
+                </div>
+              </div>
+              <button class="buttonsecondary">
+                <img class="google-icon" alt="" src="./public/google@2x.png" />
+
+                <span class="continue-with-google">Continue with Google</span>
+              </button>
+            </form>
+          </div>
+          <a class="create-an-account" href="#"
+            >Create an account</a
+          >
+        </div>
+      </div>
+    </div>
+
+    <script src="IPO-BSF-S35-own-/bluestockfintech/ipo/static/js/signinscript.js"></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+  </body>
+</html>
